# CplusAlg

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  requirements.txt
.claude/: settings.json
alg/: __init__.py  curve_fit.py  echo.py  template_match.py  test_auto_discovery.py
alg/core/: __init__.py  decorators.py  discovery.py  exception.py  mat_io.py  registry.py  shm_io.py
docs/: 2026-06-12-alg-interface-implementation.md  2026-06-12-cplusalg-modular-refactor-plan.md  2026-06-12-fix-python-teardown-sigtrap.md  2026-06-12-integrate-interpreter-threading.md  2026-06-12-threading-interpreter-stress-tests.md
docs/superpowers/plans/: 2026-06-12-fix-interpreter-threading-review-issues.md  2026-06-13-threading-perf-tests.md
docs/superpowers/specs/: 2026-06-12-alg-interface-design.md  2026-06-13-threading-perf-tests-design.md
scripts/: run_tests.sh
src/: main.cpp
src/cplus_alg/: CMakeLists.txt  alg_interface.cpp  shm_buffer.cpp
src/cplus_alg/backend/: CMakeLists.txt  cpp_backend.cpp
src/cplus_alg/data_adapters/: cv_mat_adapter.cpp
src/cplus_alg/interpreter/: CMakeLists.txt
src/cplus_alg/python/: CMakeLists.txt  python_backend.cpp  type_converter.cpp
src/cplus_alg/threading/: CMakeLists.txt
src/cplus_alg/transport/: CMakeLists.txt  direct_transport.cpp  shm_transport.cpp
src/include/: .gitkeep
src/include/cplus_alg/: alg_interface.h  data_buffer.h  logger.h  shm_handle.h
src/include/cplus_alg/backend/: backend_interface.h  cpp_backend.h  dispatch_result.h
src/include/cplus_alg/data_adapters/: cv_mat_adapter.h
src/include/cplus_alg/python/: python_backend.h  type_converter.h
src/include/cplus_alg/transport/: direct_transport.h  shm_transport.h  transport_strategy.h
src/interpreter/: GilManager.h  PyInterpreter.cpp  PyInterpreter.h
src/threading/: ParallelExecutor.h  PyBatchConsumer.h  PyProducerConsumer.h  PyThreadPool.cpp  PyThreadPool.h
src/threading/perf/: perf_main.cpp
tests/: CMakeLists.txt  TestSmoke.cpp
tests/alg/: TestAlgInterface.cpp  TestBackend.cpp  TestTemplateMatch.cpp  test_curve_fit.py  test_shm_io.py  test_template_match.py
tests/interpreter/: TestGilManager.cpp  TestPyInterpreter.cpp
tests/python/: TestPythonBackend.cpp  TestTypeConverter.cpp
tests/threading/: TestParallelExecutor.cpp  TestPyBatchConsumer.cpp  TestPyProducerConsumer.cpp  TestPyThreadPool.cpp
